Updated Spanish translation to version 2.7.2

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,16 +1,16 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.5.6
-Author=Steven Rogers
-1=OK
+Version=2.7.2
+Author=Steven Rogers, Leandro Botella Penalva
+1=Aceptar
 2=Cancelar
 
 [DIALOG_1]
 5=&Cancelar
 
 [DIALOG_2]
-0=Sobre Xreveal
+0=Acerca de Xreveal
 
 [DIALOG_3]
 0=Xreveal
@@ -18,18 +18,18 @@ Author=Steven Rogers
 2=Cerrar
 
 [DIALOG_4]
-0=Especifique el código de región de Blu-ray
-4=La ventana se cerrará automáticamente después de %d segundos.
-5=No volver a preguntar.
+0=Especifica el código de región del Blu-ray
+4=Esta ventana se cerrará automáticamente en %d segundos.
+5=&No volver a preguntarme
 
 [DIALOG_5]
-0=Especificar el código de región del DVD
-4=La ventana se cerrará automáticamente después de %d segundos.
-5=No volver a preguntar.
+0=Especifica el código de región del DVD
+4=Esta ventana se cerrará automáticamente en %d segundos.
+5=&No volver a preguntarme
 
 [DIALOG_6]
-0=Configuración
-3=Por defecto
+0=Ajustes
+3=Restablecer
 
 [DIALOG_7]
 0=Estado
@@ -37,323 +37,323 @@ Author=Steven Rogers
 [DIALOG_8]
 0=General
 3=Idioma:
-4=&Inicie Xreveal con Windows
-5=Keep this window always on &top
+4=&Iniciar Xreveal con Windows
+5=Mantener esta ventana siempre &visible
 6=&Listar unidades en el menú de la bandeja del sistema
-7=&Comprobar actualizaciones automaticamente
-8=<a>Check now</a>
-9=Theme:
+7=&Comprobar actualizaciones automáticamente
+8=<a>Comprobar ahora</a>
+9=Tema:
 
 [DIALOG_9]
 0=CD
-3=Eliminar la protección de audio digital de CD
+3=&Eliminar protección de audio digital del CD
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
-4=Eliminar el código de región del software
-5=Eliminar la protección de mejora de código de región
-6=Región del disco:
-7=Quitar el sistema de protección analógico
-8=Eliminar operaciones de usuario prohibidas
-9=Eliminar ARccOS
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+3=&Habilitar soporte para DVD
+4=Eliminar &RC (Código de Región)
+5=Eliminar RC&E (Mejora del Código de Región)
+6=&Código de región del disco:
+7=Eliminar &APS (Sistema de Protección Analógica)
+8=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
+9=Eliminar &ARccOS
+11=Xreveal necesita <a>libdvdcss-2.dll</a> para abrir DVDs.
 
 [DIALOG_11]
-0=Blu-ray
-3=&Enable Blu-ray support
-4=Quitar protección BD+
-5=Eliminar el código de región de Blu-ray
-6=Región del disco:
-7=Código de país:
-8=Eliminar operaciones de usuario prohibidas
-9=Eliminar información de control de copia
-10=Deshabilitar BD-Live
-11=Simular pantalla 3D conectada
-12=Rename folders
-13=Using &AES hardware acceleration
-14=<a>Benchmark</a>
+0=BD y UHD
+3=&Habilitar soporte para Blu-ray
+4=Eliminar &BD+
+5=Eliminar &RC (Código de Región)
+6=&Código de región del disco:
+7=&Código de país:
+8=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
+9=Eliminar &CCI (Información de Control de Copia)
+10=Deshabilitar BD-&Live
+11=&Simular pantalla 3D conectada
+12=Renombrar carpetas
+13=Usar aceleración por hardware &AES
+14=<a>Prueba de rendimiento</a>
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal no contiene ninguna clave de descifrado, necesita una base de datos clave para que funcione. <a>Saber más.</a>.
+3=Xreveal no contiene ninguna clave de descifrado, necesitarás una <a>base de datos de claves</a> para hacerlo funcionar.
 4=Ubicación de KeyDB.cfg
-6=&Search key online
+6=&Buscar claves en línea si no se encuentran localmente
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
-5=&Desactivar ejecución automática y reproducción automática
+0=Mis Unidades
+3=&Selecciona las unidades que quieres que analice Xreveal.
+5=&Deshabilitar Ejecución Automática y Reproducción Automática
 8=Habilitar &LibreDrive para UHD
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
-16=Create log file
+1=Iniciar
+3=Origen
+4=Destino
+5=Opciones
+6=Información
+7=Tipo:
+8=Capacidad:
+9=Protección:
+10=Espacio libre:
+11=Capacidad:
+12=&Mantener protección
+13=&Verificar hash del contenido
+14=Crear archivo de suma de comprobación &md5
+15=Crear &dvdid.xml
+16=Crear archivo de registro
 17=RTF
 18=TXT
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=Origen:
+4=Destino:
+6=Tiempo transcurrido:
+7=Tiempo restante:
+8=Errores de lectura:
+9=Velocidad de lectura:
 
 [DIALOG_16]
-0=Región de unidades
+0=Región de las Unidades
 
 [DIALOG_17]
 0=Subtítulos
-3=Transparencia de subtítulos
+3=&Transparencia de los subtítulos
 4=Invisibles
-5=Sólido
+5=Sólidos
 
 [DIALOG_18]
-0=Registro
+0=Registrar Xreveal
 3=Ayuda
-4=Pegue la clave de desbloqueo que recibió en el cuadro a continuación.
+4=Pega la clave de licencia que recibiste en la caja de abajo.
 
 [DIALOG_19]
-0=Teclas de acceso rápido
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+0=Atajos de Teclado
+3=Crea atajos de teclado para realizar acciones mientras Xreveal está en ejecución.
+4=Mostar menú de Xreveal:
+5=Mostrar ventana de ajustes:
+6=Habilitar/Deshabilitar Xreveal:
+7=Copiar a archivo ISO:
+8=Copiar a carpeta:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
-4=Eliminar el título de la primera reproducción
-5=Eliminar UOP (prohibiciones de operación del usuario)
-6=Eliminar restricciones parentales
+3=&Habilitar soporte para HD DVD
+4=Eliminar &primer título de reproducción
+5=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
+6=Eliminar restricciones &parentales
 7=Ubicación de KeyDB.cfg
 
 [DIALOG_21]
-0=My Discs
+0=Mis Discos
 
 [DIALOG_22]
-1=Yes
+1=Sí
 2=No
-3=Register
-4=No decryption keys were found in KeyDB.cfg. Do you want to evaluate the cloud decryption feature?
+3=Registrar
+4=No se encontró la clave del disco en KeyDB.cfg. ¿Quieres buscarla en línea?
 
 [DIALOG_23]
-0=Disc Information
+0=Información del Disco
 
 [DIALOG_24]
-0=Drive Information
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+0=Información de la Unidad
+3=Unidad:
+4=Número de serie:
+5=Específico del fabricante:
+6=Capaz de cifrar el bus:
 
 [DIALOG_25]
-0=Import...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+0=Importar...
+3=Por favor, especifica o arrastra el keydb.db de origen para importarlo a <a>%s</a>.
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Verificador de Hash del Contenido
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Sonidos
+3=Reproducir sonido tras abrir disco
+4=Reproducir sonido tras copiar disco
+5=Sonido de éxito:
+6=Sonido de error:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=Crear un Archivo de Volcado
+3=Por favor, espera...
+4=Añadiendo %s...
+5=<a>¿Cómo envíar archivos de volcado?</a>
+6=El archivo ha sido creado correctamente.
 
 [DIALOG_A]
-0=Actualización de software
+0=Actualización de Software
 3=¡Una nueva versión de %s está disponible!
-4=%s ya está disponible - tú tienes %s. ¿Te gustaría descargarlo ahora?
-5=Nota de lanzamiento:
-6=Omitir está version
-7=Recordarme más tarde
-8=Instalar actualización
+4=%s ya está disponible - tu tienes %s. ¿Quieres descargarla ahora?
+5=Notas de la versión:
+6=Omitir Esta Versión
+7=Recordarme Más Tarde
+8=Instalar Actualización
 9=Descargando - %s de %s
-10=¡Estás al día!\n\n%s es actualmente la versión más reciente disponible.
-11=Se produjo un error al recuperar la información de actualización. Por favor, inténtelo de nuevo más tarde.
-12=Ocurrió un error al descargar la actualización. Por favor, inténtelo de nuevo más tarde.
+10=¡Estás al día!\n\n%s es la última versión disponible.
+11=Hubo un error al obtener la información de actualización. Por favor, inténtalo más tarde.
+12=Hubo un error al descargar la actualización. Por favor, inténtalo más tarde.
 
 [DIALOG_B]
 1=Enviar
 3=%s ha encontrado un problema y necesita cerrarse. Lamentamos las molestias.
-4=Envíenos este informe de errores para ayudar a solucionar el problema y mejorar este software.
+4=Por favor, envíanos este informe de errores para ayudarnos a resolver este problema y mejorar este software.
 
 [DIALOG_C]
 0=Comentarios
 1=Enviar
-3=Su dirección de correo electrónico (opcional)
-4=Por favor, explique el error o problema?
+3=Tu dirección de correo electrónico (opcional)
+4=Por favor, explica el error o problema.
 
 [STRING]
 0=1 - EE.UU., Canadá
-1=2 - Europa occidental, Japón y Sudáfrica
+1=2 - Europa Occidental, Japón y Sudáfrica
 2=3 - Sur y Este de Asia
 3=4 - Australia, América Central y del Sur
-4=5 - Rusia, Europa del Este y África
+4=5 - Rusia, Europa Oriental y África
 5=6 - China
 6=7 - Reservado
-7=8 - Sedes internacionales especiales (aviones, cruceros, etc.)
-8=A - América del Norte, América Central, América del Sur, Corea, Japón, Sudeste Asiático
-9=B - Europa, Medio Oriente, África, Australia, Nueva Zelanda
-10=C - Rusia, India, China, Resto del mundo
+7=8 - Lugares internacionales especiales (aeropuertos, cruceros, etc.)
+8=A - Norteamérica, América Central, Sudamérica, Corea, Japón, Sudeste Asiático
+9=B - Europa, Oriente Medio, África, Australia, Nueva Zelanda
+10=C - Rusia, India, China, el resto del mundo
 11=Preguntar antes de abrir el disco
 12=No mostrar de nuevo
-13=¡No se detectó ninguna unidad de CD/DVD/Blu-ray!\n\nPosibles razones:\n1. No tienes una unidad de CD/DVD/Blu-ray.\n\n2. La unidad no está encendida o no está conectada correctamente.
-14=Discrepancia en la versión del controlador %d.%d≠%d.%d.\n\nVuelva a instalar Xreveal.
-15=Faltan algunos de los archivos necesarios.\n\nVuelva a instalar Xreveal.
-16=Xreveal no se instaló correctamente.\n\n¿Quieres arreglarlo?
-17=Debe reiniciar su computadora para usar Xreveal.\n\n¿Le gustaría reiniciar ahora?
-18=Xreveal no funcionará si %s esta ejecutando.\n\n¿Quieres cerrarlo?
-19=Xreveal está escaneando la unidad %C:
-20=El disco que ha insertado estará disponible en breve, ¡espere!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+13=¡No se detectó una unidad CD/DVD/Blu-ray!\n\nPosibles razones:\n1. No tienes una unidad CD/DVD/Blu-ray.\n\n2. La unidad no está encendida o no está conectada correctamente.
+14=Discrepancia en la versión del controlador %d.%d≠%d.%d.\n\nPor favor, reinstala Xreveal.
+15=Faltan algunos de los archivos requeridos.\n\nPor favor, reinstala Xreveal.
+16=Xreveal no se instaló correctamente.\n\n¿Quieres corregirlo?
+17=Necesitas reiniciar tu ordenador para usar Xreveal.\n\n¿Quieres reiniciar ahora?
+18=Xreveal no funcionará si %s está en ejecución.\n\n¿Quieres cerrarlo?
+19=Xreveal está analizando la unidad %C:
+20=El disco que has insertado estará disponible en breve, ¡por favor, espera!
+21=Xreveal no está activo para la unidad %C:!\n\nPara copiar un disco protegido contra copias, Xreveal debe estar activo para la unidad.
+22=¡El directorio '%s' no tiene espacio suficiente!\nNecesitas %s adicionales.
 23=Copiando %s...
 24=%.1f MB/s
-25=Operation successfully completed!
-26=No se encontró ninguna clave de descifrado en {%s}
+25=¡Operación completada correctamente!
+26=¡No se encontró la clave del disco! {%s}
 27=
-28=Xreveal failed to open disc, error code: %s.
-29=Conducir
-30=Vendedor
+28=Xreveal falló al abrir el disco, código de error: %s.
+29=Unidad
+30=Fabricante
 31=Producto
 32=Revisión
 33=Fecha del firmware
 34=Número de serie
-35=N/A
-36=Si
+35=N/D
+36=Sí
 37=No
 38=%C:
 39=%C:\[%S]
 40=&Estado
-41=&Open in Explorer
-42=&Create Dump File
+41=&Abrir en el Explorador
+42=&Crear un archivo de volcado
 43=
-44=Ripear &Disco duro...
-45=Ripear &Imagen...
+44=Copiar a &Carpeta...
+45=Copiar a archivo &ISO...
 46=&Habilitar Xreveal
 47=&Deshabilitar Xreveal
-48=&Configuración...
+48=&Ajustes...
 49=&Comentarios
 50=&Herramientas
-51=&Sobre
-52=S&alir
-53=&Ejecutar
+51=&Acerca de
+52=&Salir
+53=&Expulsar
 54=&Cargar
 55=&Propiedades
-56=Ninguna
-57=Este programa es gratuito.\n\nSi este programa te resulta útil, puedes hacer una <a>donación</a> para ayudarnos a mejorarlo.
-58=%s ya existe.\n¿Quieres cambiarlo?
-59=¿Está seguro de que desea cancelar?
-60=Your license expired on %s.
+56=Ninguno
+57=Estás usando la versión gratuita, <a>mejora a Pro</a> para desbloquear características extra.
+58=%s ya existe.\n¿Quieres remplazarlo?
+59=¿Estás seguro de que quieres cancelar?
+60=Tu licencia expiró el %s.
 61=Reproductor
-62=Código de región
+62=Región
 63=Cambios restantes
 64=Región %C
-65=&Manténgase en la cima
+65=&Siempre visible
 66=&Comprar
-67=Licenciado a %s\r\nMax usuarios: %d\r\nActualizaciones gratis hasta: %s
+67=Licenciado a %s\r\nUsuarios máximos: %d\r\nActualizaciones gratuitas hasta: %s
 68=Para siempre
-69=Registro
-70=¡Gracias por registrarte!
-71=La clave de registro que ingresó es incorrecta.
-72=Sin disco
-73=¿Restablecer TODAS las opciones a sus valores predeterminados?\n\nAl hacer clic en 'No' simplemente se restablecerán las opciones de la página actual.
-74=RowId
-75=Status
-76=Label
-77=Type
-78=Capacity
-79=Date
-80=Disc ID
-81=Date added
+69=&Registrar...
+70=¡Gracias por registrar!
+71=La clave de registro que has introducido no es válida.
+72=Sin Disco
+73=¿Restablecer TODAS las opciones a sus valores predeterminados?\n\nAl pulsar 'No' se restablecerán las opciones de la página actual.
+74=ID
+75=Estado
+76=Etiqueta
+77=Tipo
+78=Capacidad
+79=Fecha
+80=ID del Disco
+81=Fecha añadido
 82=MKB
-83=Main playlist
-84=BD+ date
+83=Lista de reproducción principal
+84=Fecha del BD+
 85=
 86=VID
 87=MK
 88=VUK
 89=UK
-90=&View
-91=&Delete "%s"
-92=Delete &All
-93=Are you sure you want to delete "%s"?
-94=Are you sure you want to delete all records?
-95=This feature is only available in the <a>Pro version</a>.
-96=&Refresh
-97=&Edit
-98=&Import...
+90=&Ver
+91=&Eliminar "%s"
+92=Eliminar &Todo
+93=¿Estás seguro de que quieres eliminar "%s"?
+94=¿Estás seguro de que quieres eliminar todos los registros?
+95=Esta característica requiere la <a>versión Pro</a>.
+96=&Refrescar
+97=&Editar
+98=&Importar...
 99=
-100=Comment
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
-115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
-137=Pro feature
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
-141=Light
-142=Dark
-143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
+100=Comentario
+101=Verificar ISO
+102=Verificar Carpeta
+103=Verificar Unidad
+104=Capaz de cifrar el bus
+105=%s (Unidad: %s)
+106=Abrir Carpeta de Registro
+107=Opciones
+108=Salida verbosa
+109=Versión de línea de comandos (Windows/macOS/Linux)
+110=Abortar
+111=Específico fabricante
+112=El directorio %s no existe. ¿Quieres crearlo?
+113=Cuando termine:
+114=No hacer nada
+115=,
+116=Expulsar disco
+117=Reproducir sonido
+118=Salir de Xreveal
+119=Ninguna acción
+120=Apagar
+121=Suspender
+122=Hibernar
+123=Bloquear equipo
+124=Cerrar sesión
+125=Todos Los Archivos
+126=Archivos ISO
+127=Archivos WAV
+128=Archivos KeyDB
+129=Archivos de Base de Datos
+130=Selecciona o suelta el archivo WAV aquí
+131=Selecciona o suelta el KeyDB.cfg aquí
+132=%u%% completado
+133=¡Error de lectura de la unidad %C:!\Sectores: %u-%u
+134=¡Error de lectura %s!\nSectores: %u-%u
+135=¡Abortado!
+136=Copiando...
+137=Solo en Pro
+138=Actualizar licencia
+139=Vas a crear un archivo de imagen protegido. El archivo solo puede ser leído desde una unidad virtual si Xreveal está instalado y en ejecución!\n\n¿Quieres continuar?
+140=¿Eliminar archivo incompleto?\n\n%s
+141=Claro
+142=Oscuro
+143=Sistema
+144=(%u reintentos)
+145=Pausar la operación
+146=Reanudar la operación
