Added: 43=&Content Hash Verifier

--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -253,7 +253,7 @@ Author=فتحي الداودية
 40=&الحالة
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=النسخ إلى &القرص الصلب...
 45=النسخ إلى &صورة...
 46=& Xreveal تمكين
