--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -253,7 +253,7 @@ Author=jekovcar
 40=&Състояние
 41=&Отвори в Explorer
 42=&Създай дъмп файл
-43=
+43=Съдържание Хеш Верификатор
 44=Извличане на &твърд диск...
 45=Извличане в &имидж...
 46=&Активирай Xreveal
