--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -169,7 +169,7 @@ Author=Tanuki
 3=请指定或拖动源 keydb.db 以导入到 <a>%s</a> 中。
 
 [DIALOG_26]
-0=视频哈希值校验
+0=内容哈希值校验
 
 [DIALOG_27]
 0=声音
@@ -253,7 +253,7 @@ Author=Tanuki
 40=状态(&S)
 41=在资源管理器中打开(&O)
 42=生成&Dump文件
-43=
+43=内容哈希值校验(&C)
 44=复制到硬盘...
 45=复制到映像...
 46=启用 Xreveal(&E)
