--- a/Xreveal_CHT.ini
+++ b/Xreveal_CHT.ini
@@ -253,7 +253,7 @@ Author=
 40=狀態(&S)
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=Rip to &Folder...
 45=Rip to &ISO file...
 46=啟用Xreveal(&E)
