--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -253,7 +253,7 @@ Author=
 40=&Status
 41=&Open in Explorer
 42=&Create a dump file
-43=
+43=&Content Hash Verifier
 44=Rip to &Folder...
 45=Rip to &ISO file...
 46=&Enable Xreveal
