--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -253,7 +253,7 @@ Author=TJL
 40=&Tila
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=Kopioi &kiintolevylle...
 45=Kopioi &levykuvaan...
 46=&Ota Xreveal käyttöön
