--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -253,7 +253,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 40=&Status
 41=&Buka di Explorer
 42=&Buat Berkas Dump
-43=
+43=&Content Hash Verifier
 44=Rip ke &Folder...
 45=Rip ke berkas &ISO...
 46=&Aktifkan Xreveal
