--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -253,7 +253,7 @@ Author=bovirus (bovirus@gmail.com)
 40=&Stato
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
 46=&Abilita Xreveal
