--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -253,7 +253,7 @@ Author=Re*Index.(ot_inc)
 40=情報(&S)
 41=エクスプローラーを開く(&O)
 42=ダンプファイルを作成(&C)
-43=
+43=コンテンツハッシュを検証
 44=ハードディスクにリッピング(&H)
 45=ISO ファイルにリッピング(&I)
 46=Xreveal を有効化(&E)
