--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -253,7 +253,7 @@ Author=VenusGirl (비너스걸)
 40=상태(&S)
 41=탐색기에서 열기(&O)
 42=덤프 파일 만들기(&C)
-43=
+43=콘텐츠 해시 확인자
 44=하드 디스크에 복사(&H)...
 45=이미지로 복사(&I)...
 46=Xreveal 사용함(&E)
