--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -253,7 +253,7 @@ Author=Fresta
 40=&Status
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=Zgraj na &Dysk Twardy...
 45=Zgraj do &Obrazu...
 46=&Włącz Xreveal
