--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -253,7 +253,7 @@ Author=jekovcar
 40=&Состояние
 41=&Открыть в проводнике
 42=&Создать файл дампа
-43=
+43=Проверка хэша содержимого
 44=Копировать в &папку...
 45=Копировать в файл &ISO...
 46=&Включить Xreveal
