--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -253,7 +253,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 40=&Estado
 41=&Abrir en el Explorador
 42=&Crear un archivo de volcado
-43=
+43=Verificador de Hash del Contenido
 44=Copiar a &Carpeta...
 45=Copiar a archivo &ISO...
 46=&Habilitar Xreveal
