--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -253,7 +253,7 @@ Author=Sopor
 40=&Status
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=Kopiera till &hårddisk...
 45=Kopiera till avb&ild...
 46=Aktiv&era Xreveal
