--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -253,7 +253,7 @@ Author=Andex
 40=&Statut
 41=&Ouvrir dans l'explorateur Windows
 42=&Créer un fichier d'informations
-43=
+43=Vérification
 44=Copier dans un &dossier...
 45=Copier en &fichier ISO...
 46=&Activer/Désactiver
