--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -253,7 +253,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 40=S&tanje
 41=&Open in Explorer
 42=&Create Dump File
-43=
+43=&Content Hash Verifier
 44=Kopiraj na trdi disk...
 45=Kopiraj v sliko ...
 46=Omogoči Xreveal
