--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.2
+Version=2.7.3
 Author=Andex
 1=OK
 2=Annuler
@@ -38,11 +38,11 @@ Author=Andex
 0=Général
 3=&Langage:
 4=&Démarrer Xreveal avec Windows
-5=&Toujours devant
+5=T&oujours devant
 6=&Afficher les lecteurs dans le menu de Xreveal
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
-9=&Mode:
+9=&Thème:
 
 [DIALOG_9]
 0=CD
@@ -61,7 +61,7 @@ Author=Andex
 
 [DIALOG_11]
 0=BD & UHD
-3=&Activer la prise en charge des Blu-ray BD et UHD
+3=&Activer la prise en charge des Blu-ray
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
 6=Région du &disque:
@@ -169,7 +169,7 @@ Author=Andex
 3=Sélectionner ou déposer ici un fichier 'keydb.db' à importer dans <a>%s</a>
 
 [DIALOG_26]
-0=Vérification
+0=Vérification de l'intégrité des données BD/UHD
 
 [DIALOG_27]
 0=Sons
@@ -253,7 +253,7 @@ Author=Andex
 40=&Statut
 41=&Ouvrir dans l'explorateur Windows
 42=&Créer un fichier d'informations
-43=Vérification
+43=&Vérifier un BD/UHD
 44=Copier dans un &dossier...
 45=Copier en &fichier ISO...
 46=&Activer/Désactiver
