--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -136,6 +136,7 @@ Author=فتحي الداودية
 6=Enable/Disable Xreveal:
 7=Rip to ISO file:
 8=Rip to folder:
+9=Content Hash Verifier:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=فتحي الداودية
 4=Adding %s...
 5=<a>How to submit dump files?</a>
 6=The file has been successfully created.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=تحديث البرامج
@@ -357,3 +365,4 @@ Author=فتحي الداودية
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
+147=Programs
