--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -136,6 +136,7 @@ Author=Tanuki
 6=启用/禁用 Xreveal:
 7=复制到 ISO 文件:
 8=复制到文件夹:
+9=内容哈希值校验:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=Tanuki
 4=提交 %s...
 5=<a>如何提交?</a>
 6=文件已成功创建。
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=软件更新
@@ -357,3 +365,4 @@ Author=Tanuki
 144=(%u 次重试)
 145=暂停操作
 146=恢复操作
+147=程序
