--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.2
+Version=2.7.3
 Author=
 1=OK
 2=Cancel
@@ -136,6 +136,7 @@ Author=
 6=Enable/Disable Xreveal:
 7=Rip to ISO file:
 8=Rip to folder:
+9=Content Hash Verifier:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=
 4=Adding %s...
 5=<a>How to submit dump files?</a>
 6=The file has been successfully created.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=Software Update
@@ -255,7 +263,7 @@ Author=
 42=&Create a dump file
 43=&Content Hash Verifier
 44=Rip to &Folder...
-45=Rip to &ISO file...
+45=Rip to &ISO File...
 46=&Enable Xreveal
 47=&Disable Xreveal
 48=&Settings...
@@ -357,3 +365,4 @@ Author=
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
+147=Programs
