--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -136,6 +136,7 @@ Author=Andex
 6=Activer/Désactiver:
 7=Copier en fichier ISO:
 8=Copier dans un dossier:
+9=Vérification de l'intégrité des données BD/UHD:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=Andex
 4=Ajout de %s...
 5=<a>Comment transmettre un fichier d'informations?</a>
 6=Le fichier a été correctement créé!
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=Mise à jour
@@ -357,3 +365,4 @@ Author=Andex
 144=(%u essais)
 145=Mettre la copie en pause
 146=Continuer la copie...
+147=Programmes
