--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -136,6 +136,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=Aktifkan/Nonaktifkan Xreveal:
 7=Rip ke berkas ISO:
 8=Rip ke folder:
+9=Content Hash Verifier:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author= Lieba Natur Brilian (naturbrilian)
 4=Menambahkan %s...
 5=<a>Cara untuk submit berkas dump?</a>
 6=Berkas berhasil dibuat.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -357,3 +365,4 @@ Author= Lieba Natur Brilian (naturbrilian)
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
+147=Program
