--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -136,6 +136,7 @@ Author=Re*Index.(ot_inc)
 6=Xreveal を有効化/無効化:
 7=ISO ファイルでリッピング:
 8=フォルダーでリッピング:
+9=コンテンツハッシュを検証:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=Re*Index.(ot_inc)
 4=%s を追加中...
 5=<a>ダンプファイルの提出方法は？</a>
 6=ファイルが正常に作成されました。
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=ソフトウェアアップデート
@@ -357,3 +365,4 @@ Author=Re*Index.(ot_inc)
 144=(%u 回の再試行)
 145=操作を一時停止
 146=操作を再開
+147=プログラム
