--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -136,6 +136,7 @@ Author=VenusGirl (비너스걸)
 6=Xreveal 사용/사용 안 함:
 7=ISO 파일로 리핑:
 8=폴더로 리핑:
+9=콘텐츠 해시 확인자:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=VenusGirl (비너스걸)
 4=%s 추가 중...
 5=<a>덤프 파일은 어떻게 제출하나요?</a>
 6=파일이 성공적으로 생성되었습니다.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -357,3 +365,4 @@ Author=VenusGirl (비너스걸)
 144=(%u 재시도)
 145=작업 일시 중지
 146=작업 재개
+147=프로그램
