--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -136,6 +136,7 @@ Author=jekovcar
 6=Включить/Отключить Xreveal:
 7=Копировать в файл ISO:
 8=Копировать в папку:
+9=Проверка хэша содержимого:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=jekovcar
 4=Добавление %s...
 5=<a>Как отправить файлы дампа?</a>
 6=Файл успешно создан.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=Обновление программы
@@ -357,3 +365,4 @@ Author=jekovcar
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
+147=Программы
