--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -136,6 +136,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Habilitar/Deshabilitar Xreveal:
 7=Copiar a archivo ISO:
 8=Copiar a carpeta:
+9=Verificador de Hash del Contenido:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Añadiendo %s...
 5=<a>¿Cómo envíar archivos de volcado?</a>
 6=El archivo ha sido creado correctamente.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=Actualización de Software
@@ -357,3 +365,4 @@ Author=Steven Rogers, Leandro Botella Penalva
 144=(%u reintentos)
 145=Pausar la operación
 146=Reanudar la operación
+147=Programas
