--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -136,6 +136,7 @@ Author=jekovcar
 6=Активирай/Деактивирай Xreveal:
 7=Извличане в ISO файл:
 8=Извличане в папка:
+9=Съдържание Хеш Верификатор:
 
 [DIALOG_20]
 0=HD DVD
@@ -184,6 +185,13 @@ Author=jekovcar
 4=Добавяне на %s...
 5=<a>Как да изпратя дъмп файлове?</a>
 6=Файлът е създаден успешно.
+
+[DIALOG_29]
+0=Events
+3=Post-Scan Event
+4=Specifies a command line for the post-scan event tool to run.
+5=&Macros >>
+51=&Browse...
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -357,3 +365,4 @@ Author=jekovcar
 144=(%u retries)
 145=Pause the operation
 146=Resume the operation
+147=Програми
