--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -136,7 +136,7 @@ Author=Andex
 6=Activer/Désactiver:
 7=Copier en fichier ISO:
 8=Copier dans un dossier:
-9=Vérification de l'intégrité des données BD/UHD:
+9=Vérifier un BD/UHD:
 
 [DIALOG_20]
 0=HD DVD
@@ -187,11 +187,11 @@ Author=Andex
 6=Le fichier a été correctement créé!
 
 [DIALOG_29]
-0=Events
-3=Post-Scan Event
-4=Specifies a command line for the post-scan event tool to run.
+0=Actions
+3=Actions Post-Scan
+4=Spécifiez une commande à exécuter après le scan d'un média:
 5=&Macros >>
-51=&Browse...
+51=&Commande...
 
 [DIALOG_A]
 0=Mise à jour
