--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -183,13 +183,13 @@ Author=
 0=Create a Dump File
 3=Please wait...
 4=Adding %s...
-5=<a>How to submit dump files?</a>
+5=<a>How to submit a dump file?</a>
 6=The file has been successfully created.
 
 [DIALOG_29]
-0=Events
-3=Post-Scan Event
-4=Specifies a command line for the post-scan event tool to run.
+0=Actions
+3=Post-Scan Action
+4=Specifies a command line for the post-scan action tool to run.
 5=&Macros >>
 51=&Browse...
 
