--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -187,9 +187,9 @@ Author=Fresta
 6=The file has been successfully created.
 
 [DIALOG_29]
-0=Events
-3=Post-Scan Event
-4=Specifies a command line for the post-scan event tool to run.
+0=Actions
+3=Post-Scan Action
+4=Specifies a command line for the post-scan action tool to run.
 5=&Macros >>
 51=&Browse...
 
