--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -187,9 +187,9 @@ Author=VenusGirl (비너스걸)
 6=파일이 성공적으로 생성되었습니다.
 
 [DIALOG_29]
-0=Events
-3=Post-Scan Event
-4=Specifies a command line for the post-scan event tool to run.
+0=Actions
+3=Post-Scan Action
+4=Specifies a command line for the post-scan action tool to run.
 5=&Macros >>
 51=&Browse...
 
