--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -189,7 +189,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_29]
 0=Actions
 3=Post-Scan Action
-4=Specifies a command line for the post-scan action tool to run.
+4=Specify a command to run after scanning media.
 5=&Macros >>
 51=&Browse...
 
