--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -189,7 +189,7 @@ Author=VenusGirl (비너스걸)
 [DIALOG_29]
 0=Actions
 3=Post-Scan Action
-4=Specifies a command line for the post-scan action tool to run.
+4=Specify a command to run after scanning media.
 5=&Macros >>
 51=&Browse...
 
