Update SPA to 2.7.3

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.7.2
+Version=2.7.3
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -183,15 +183,15 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Crear un Archivo de Volcado
 3=Por favor, espera...
 4=Añadiendo %s...
-5=<a>¿Cómo envíar archivos de volcado?</a>
+5=<a>¿Cómo envíar un archivo de volcado?</a>
 6=El archivo ha sido creado correctamente.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan Action
-4=Specify a command to run after scanning media.
+0=Acciones
+3=Acción Post-Análisis
+4=Especifica un comando a ejecutar tras analizar los medios.
 5=&Macros >>
-51=&Browse...
+51=&Examinar...
 
 [DIALOG_A]
 0=Actualización de Software
@@ -263,7 +263,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 42=&Crear un archivo de volcado
 43=Verificador de Hash del Contenido
 44=Copiar a &Carpeta...
-45=Copiar a archivo &ISO...
+45=Copiar a Archivo &ISO...
 46=&Habilitar Xreveal
 47=&Deshabilitar Xreveal
 48=&Ajustes...
