Xreveal_DEU.ini

--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.7.2
+Version=2.7.3
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -42,7 +42,7 @@ Author=The Punisher
 6=&Laufwerke im Xreveal-Taskleistensymbol anzeigen
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
-9=Theme:
+9=Schema:
 
 [DIALOG_9]
 0=CD
@@ -187,11 +187,11 @@ Author=The Punisher
 6=Die Infodump-Datei wurde erfolgreich erstellt.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan Action
-4=Specify a command to run after scanning media.
-5=&Macros >>
-51=&Browse...
+0=Aktionen
+3=Aktion nach dem Scannen
+4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll.
+5=&Makros >>
+51=&Suchen...
 
 [DIALOG_A]
 0=Software-Update
