--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -73,6 +73,8 @@ Author=فتحي الداودية
 12=Rename folders
 13=Using &AES hardware acceleration
 14=<a>Benchmark</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=DB مفتاح 
