--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -73,6 +73,8 @@ Author=jekovcar
 12=Преименуване на папки
 13=Използвай &AES хардуерно ускорение
 14=<a>Бенчмарк</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
