--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -73,6 +73,8 @@ Author=The Punisher
 12=Ordner temporär umbenennen
 13=&AES Hardwarebeschleunigung nutzen
 14=<a>Benchmark</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
