--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.3
+Version=2.7.4
 Author=
 1=OK
 2=Cancel
@@ -73,6 +73,8 @@ Author=
 12=Rename folders
 13=Using &AES hardware acceleration
 14=<a>Benchmark</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -188,7 +190,7 @@ Author=
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
 51=&Browse...
@@ -246,7 +248,7 @@ Author=
 25=Operation completed successfully!
 26=The disc key is not found! {%s}
 27=
-28=Xreveal failed to open disc, error code: %s.
+28=Failed to open disc, error code: %s.
 29=Drive
 30=Vendor
 31=Product
@@ -285,7 +287,7 @@ Author=
 64=Region %C
 65=&Always on top
 66=&Purchase
-67=Licensed to %s\r\nMax users: %d\r\nFree updates until: %s
+67=Licensed to %s\r\nMax users: %d\r\nLicensed until: %s
 68=Forever
 69=&Register...
 70=Thanks for registering!
