--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.3
+Version=2.7.4
 Author=Andex
 1=OK
 2=Annuler
@@ -70,9 +70,11 @@ Author=Andex
 9=Supprimer &CCI (Copy Control Information)
 10=Désactiver BD-&Live
 11=&Simuler un affichage 3D
-12=Nom des dossiers 'spéciaux'
+12=Nom de dossier 'spécial'
 13=Utiliser l'accélération &matérielle
 14= <a>Test</a>
+15=Supprimer les publicités et bandes-annonces &ennuyeuses
+16=Supprimer les sé&quences vidéo inférieures à %s minutes
 
 [DIALOG_12]
 0=KeyDB
