--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -73,6 +73,8 @@ Author=bovirus (bovirus@gmail.com)
 12=Rinomina cartelle
 13=Usa accelerazione hardware &AES
 14=<a>Prestazioni</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
