--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -73,6 +73,8 @@ Author=Re*Index.(ot_inc)
 12=フォルダーの名前を変更
 13=AES ハードウェアアクセラレーションを使用する(&A)
 14=<a>ベンチマーク</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
