--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -73,6 +73,8 @@ Author=VenusGirl (비너스걸)
 12=폴더 이름 바꾸기
 13=AES 하드웨어 가속화 사용(&A)
 14=<a>북마크</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
