--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -73,6 +73,8 @@ Author=Steven Rogers, Leandro Botella Penalva
 12=Renombrar carpetas
 13=Usar aceleración por hardware &AES
 14=<a>Prueba de rendimiento</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
