--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -73,6 +73,8 @@ Author=Tanuki
 12=重命名文件夹
 13=启用 &AES 硬件加速
 14=<a>测速</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
