--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -73,6 +73,8 @@ Author= Lieba Natur Brilian (naturbrilian)
 12=Namai ulang folder
 13=Gunakan akselerasi perangkat keras &AES
 14=<a>Benchmark</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
