--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -73,6 +73,8 @@ Author=jekovcar
 12=Переименование папок
 13=Использовать аппаратное ускорение &AES
 14=<a>Бенчмарк</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
