--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -73,6 +73,8 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 12=Rename folders
 13=Using &AES hardware acceleration
 14=<a>Benchmark</a>
+15=Remove &annoying adverts and trailers
+16=Remove video sequences shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
