--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.7.3
+Version=2.7.4
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -73,8 +73,8 @@ Author=Steven Rogers, Leandro Botella Penalva
 12=Renombrar carpetas
 13=Usar aceleración por hardware &AES
 14=<a>Prueba de rendimiento</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+15=Eliminar anuncios &molestos y tráileres
+16=Eliminar secuencias de vídeo inferiores a %s minutos
 
 [DIALOG_12]
 0=KeyDB
@@ -190,7 +190,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_29]
 0=Acciones
-3=Acción Post-Análisis
+3=Acción post-análisis
 4=Especifica un comando a ejecutar tras analizar los medios.
 5=&Macros >>
 51=&Examinar...
@@ -248,7 +248,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 25=¡Operación completada correctamente!
 26=¡No se encontró la clave del disco! {%s}
 27=
-28=Xreveal falló al abrir el disco, código de error: %s.
+28=Fallo al abrir el disco, código de error: %s.
 29=Unidad
 30=Fabricante
 31=Producto
@@ -287,7 +287,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 64=Región %C
 65=&Siempre visible
 66=&Comprar
-67=Licenciado a %s\r\nUsuarios máximos: %d\r\nActualizaciones gratuitas hasta: %s
+67=Licenciado a %s\r\nUsuarios máximos: %d\r\nLicenciado hasta: %s
 68=Para siempre
 69=&Registrar...
 70=¡Gracias por registrar!
